# pyrift

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json  setup.py
pyrift/: chart.py  chartinfo.py  difficulty.py  event.py  typeddicts.py
