[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pyrift_96_LB"
version = "0.0.1"
authors = [
    { name="96 LB", email="pyrift@96lb.me" },
]
description = "Python library for managing Rift of the NecroDancer charts"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/96-LB/pyrift"
Issues = "https://github.com/96-LB/pyrift/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyrift"]